# hs-sandbox

helloworld/: LICENSE  README.md  helloworld.cabal
helloworld/app/: Main.hs
helloworld/src/: Lib.hs
helloworld/test/: Spec.hs
